force-app/main/default/objects/Tipo_de_Produto__c/Tipo_de_Produto__c.object-meta.xml
<CustomObject>
    <description>Tipos de produtos especificos de propostas dos centros.</description>
    <label>Tipo de Produto</label>
    <nameField>
        <label>Nome de Tipo de Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de Produtos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>