force-app/main/default/objects/Tipo_de_Produto__c/fields/Componentes_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Componentes_do_produto__c</fullName>
    <description>Componentes do produto</description>
    <inlineHelpText>Informe os componentes do produto.</inlineHelpText>
    <label>Componentes do produto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>