force-app/main/default/objects/Tipo_de_Produto__c/fields/Contem_alergenicos__c.field-meta.xml
<CustomField>
    <fullName>Contem_alergenicos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contem alergênicos</description>
    <inlineHelpText>Marque caso contenha alergenicos no produto.</inlineHelpText>
    <label>Contem alergenicos</label>
    <type>Checkbox</type>
</CustomField>