force-app/main/default/objects/Tipo_de_Produto__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <description>Peso do produto.</description>
    <inlineHelpText>Informe o peso do produto.</inlineHelpText>
    <label>Peso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>