force-app/main/default/objects/Tipo_de_Produto__c/fields/Tipo_de_armazenamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_armazenamento__c</fullName>
    <description>Tipo de armazenamento do produto.</description>
    <inlineHelpText>Selecione o tipo de armazenamento do produto.</inlineHelpText>
    <label>Tipo de armazenamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armazenamento congelado</fullName>
            </value>
            <value>
                <fullName>Armazenamento em ambiente controlado</fullName>
            </value>
            <value>
                <fullName>Armazenamento em temperatura ambiente</fullName>
            </value>
            <value>
                <fullName>Armazenamento refrigerado</fullName>
            </value>
            <value>
                <fullName>Armazenamento seco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>