force-app/main/default/objects/Tipo_de_Produto__c/fields/Validade__c.field-meta.xml
<CustomField>
    <fullName>Validade__c</fullName>
    <description>Validade do produto</description>
    <inlineHelpText>Informe a validade do produto</inlineHelpText>
    <label>Validade</label>
    <type>Date</type>
</CustomField>