force-app/main/default/objects/Tipo_de_Produto__c/fields/Validade_pos_abertura_em_dias__c.field-meta.xml
<CustomField>
    <fullName>Validade_pos_abertura_em_dias__c</fullName>
    <label>Validade pos abertura em dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>